[project]
name = "Project_1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabse213", email = "sg2697@mci4me.at"},
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
